# kmeans

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
app/: app.py
docs/: business-understanding.md  mkdocs.md  mkdocs.yml
docs/docs/: index.md
kmflow/: __init__.py  cli_utils.py  cluster_prep.py  cluster_prep_utils.py  data_ingestion.py  evaluation.py  evaluation_utils.py  pca_utils.py  plots.py  plots_utils.py  preprocess.py  preprocess_utils.py  preprocessing.py  process.py  process_utils.py  processing.py  processing_utils.py
kmflow/cli/: __init__.py  cluster_prep.py  evaluation.py  kmeans.py  pca.py  plots.py  process.py  wrangle.py
kmflow/modeling/: kmeans.py  kmeans_utils.py  stdin_batch_1-20.csv
kmflow/utils/: __init__.py  cli_utils.py  cluster_prep_utils.py  kmeans_utils.py  pca_utils.py  plots_utils.py  process_utils.py
main/: entrypoint.py
module/: __init__.py  cluster_prep.py  data_ingestion.py  evaluation.py  plots.py  preprocessing.py  processing.py  processing_utils.py
module/modeling/: kmeans.py
notebooks/: tennis_racquet_eda.ipynb
reports/: benchmark.csv  benchmark_2.csv
tennis_racquet_analysis/: cluster_prep.py  data_ingestion.py  dataset.py  evaluation.py  evaluation_utils.py  features.py  features_utils.py  plots.py  plots_utils.py  preprocessing.py  preprocessing_utils.py  processing.py  processing_utils.py
tennis_racquet_analysis/data-prep/: data-preparation.py
tennis_racquet_analysis/data_prep/: app.py  data_preparation.py  module.py  plots.py
tennis_racquet_analysis/modeling/: kmeans.py  (+3 more)
